fix for action menu and sidebar clashing in mobile view
Required a spacing change which then made the top of the request page look odd, so I've evened that up too (See screenshots)

--- a/app/assets/stylesheets/responsive/_global_layout.scss
+++ b/app/assets/stylesheets/responsive/_global_layout.scss
@@ -112,9 +112,10 @@ textarea{
 
 #right_column_flip, #right_column {
   @include grid-column(12);
+  margin-top: 20px;
   @include respond-min( $main_menu-mobile_menu_cutoff ){
+    margin-top: 0;
     @include grid-column($columns:3);
-    margin-top:20px;
     @include lte-ie7 {
       width: 12.625em;
     }
